.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:13:52 **** Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
10:15:56 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
src/signal_example.c: In function 'handler':
src/signal_example.c:31:6: warning: type of 'signo' defaults to 'int' [-Wimplicit-int]
 void handler( signo )
      ^
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
10:16:59 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
14:45:57 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
14:46:10 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
14:46:11 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
14:47:54 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
14:47:56 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
14:48:23 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
14:48:24 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
12:45:01 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
12:45:07 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
12:45:29 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
12:45:32 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
12:45:42 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
12:45:44 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:04:14 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:04:15 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:05:13 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
11:05:14 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:05:31 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
11:05:32 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:06:59 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
11:07:02 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:07:19 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:08:07 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
src/signal_example.c:45:9: error: expected declaration specifiers or '...' before string constant
  printf("handler ISR\n");
         ^
src/signal_example.c:46:3: error: expected identifier or '(' before '}' token
   }
   ^
Makefile:55: recipe for target 'build/x86_64-debug/src/signal_example.o' failed
cc: /Users/hurdleg/qnx700/host/darwin/x86_64/usr/lib/gcc/x86_64-pc-nto-qnx7.0.0/5.4.0/cc1 error 1
make: *** [build/x86_64-debug/src/signal_example.o] Error 1
11:09:01 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
11:09:02 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
11:09:49 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/signal_example.d,-MT,build/x86_64-debug/src/signal_example.o -o build/x86_64-debug/src/signal_example.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/signal_example.c
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/signal_example   build/x86_64-debug/src/signal_example.o  
11:09:51 **** Incremental Build of configuration x86_64-debug for project signal_example ****
make -j11 all 
make: Nothing to be done for 'all'.
